# network_systems

./: .gitignore  CMakeLists.txt  README.md  default.profraw  functions.cmake  package.xml  ros_info.txt
.github/: CODEOWNERS  release.yml
.github/workflows/: lint.yaml  run_sailbot_workspace_CI.yml  test.yaml  tests.yml
config/: README.md  all_disable.yaml  default.yaml  default_prod_en.yaml  example_enable.yaml
config/example/: example_en.yaml
config/mock_ais/: mock_ais_en_default.yaml  mock_ais_template.yaml
config/remote_transceiver/: remote_transceiver_template.yaml
launch/: example.py  main_launch.py  network_systems_launch.py
lib/: CMakeLists.txt  README.md
lib/cmn_hdrs/: CMakeLists.txt  autogen_ros_topics.sh  ros_info.h  ros_nodes.h  shared_constants.h  utils.h
lib/net_node/inc/: net_node.h
lib/net_node/src/: net_node.cpp
lib/protofiles/: CMakeLists.txt  sensors.proto  waypoints.proto
lib/sailbot_db/: CMakeLists.txt
lib/sailbot_db/inc/: sailbot_db.h  util_db.h
lib/sailbot_db/src/: main.cpp  sailbot_db.cpp  util_db.cpp
lib/sailbot_db/test/: test_sailbot_db.cpp
lib/utils/: utils.h
lib/virtual_iridium_server/: CMakeLists.txt  virtual_iridium_server.h
logs/: .gitignore
projects/: CMakeLists.txt
projects/ais_transceiver/: CMakeLists.txt
projects/ais_transceiver/inc/: ais_ship.h  ais_transceiver.h  mock_ais_sim.h
projects/ais_transceiver/src/: ais_transceiver_ros_intf.cpp  mock_ais_sim.cpp
projects/ais_transceiver/test/: test_ais_transceiver.cpp
projects/can_transceiver/: CMakeLists.txt
projects/can_transceiver/diagrams/: common_sequence.puml  deployment_sequence.puml  simulation_sequence.puml
projects/can_transceiver/inc/: can_frame_parser.h  can_transceiver.h
projects/can_transceiver/src/: can_frame_parser.cpp  can_transceiver.cpp  can_transceiver_ros_intf.cpp
projects/can_transceiver/test/: test_can_transceiver.cpp
projects/example/: CMakeLists.txt  README.md
projects/example/inc/: cached_fib.h
projects/example/src/: cached_fib.cpp  cached_fib_ros_intf.cpp  cached_fib_subscriber.cpp
projects/example/test/: test_cached_fib.cpp
projects/local_transceiver/: CMakeLists.txt
projects/local_transceiver/diagrams/: common.puml  inbound_sequence.puml  outbound_sequence.puml  participants.puml
projects/local_transceiver/inc/: at_cmds.h  local_transceiver.h
projects/local_transceiver/src/: local_transceiver.cpp  local_transceiver.h  local_transceiver_ros_intf.cpp
projects/local_transceiver/test/: test_local_transceiver.cpp
projects/mock_ais/: CMakeLists.txt
projects/mock_ais/inc/: mock_ais.h
projects/mock_ais/src/: mock_ais.cpp  mock_ais_ros_intf.cpp
projects/mock_ais/test/: test_mock_ais.cpp
projects/remote_transceiver/: CMakeLists.txt
projects/remote_transceiver/diagrams/: common.puml  receive_sensors_sequence.puml  transmit_global_path_sequence.puml
projects/remote_transceiver/inc/: remote_transceiver.h  sailbot_db.h
projects/remote_transceiver/src/: main.cpp  remote_transceiver.cpp  remote_transceiver_ros_intf.cpp  sailbot_db.cpp
projects/remote_transceiver/test/: test_remote_transceiver.cpp
scripts/: README.md  db_util  run_virtual_iridium.sh
